<!DOCTYPE resources [<!ENTITY app_name "Eventeger"><!ENTITY sign_in  "Sign In"><!ENTITY app_id   "ru.labore.eventeger">]>

<resources>
    <!-- Utility strings -->
    <string name="utility_shared_preference_file_key" translatable="false">
        &app_id;.PREFERENCE_FILE_KEY
    </string>
    <string name="api_url" translatable="false">
        http://78.85.186.36/api/
    </string>
    <string name="default_notification_channel_id" translatable="false">&app_id;</string>
    <string name="notification_channel_name" translatable="false">
        &app_name;
    </string>
    <string name="notification_channel_description">
        Default &app_name; notification channel.
    </string>

    <!-- Global strings -->
    <string name="app_name" translatable="false">&app_name;</string>
    <string name="there_is_nothing_here_yet">There is nothing here yet 😞</string>

    <!-- Network-related strings -->
    <string name="session_timed_out">
        Your session has timed out. Please, sign in again.
    </string>
    <string name="server_unavailable">
        Our server is unavailable. Please, retry after a few minutes
    </string>
    <string name="no_internet">Your device has no internet connection</string>
    <string name="loading">Loading…</string>
    <string name="wait">Wait…</string>

    <!-- Login Activity strings -->
    <string name="login_activity_label">&sign_in;&#09;•&#09;&app_name;</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="enter_username">Enter username</string>
    <string name="username_incorrect">
                Username must only contain english letters, digits and signs #, $, *, _
            </string>
    <string name="enter_password">Enter password</string>
    <string name="password_too_short">Password must contain at least 8 characters</string>
    <string name="invalid_credentials">Couldn\'t log in: wrong username or password</string>
    <string name="sign_in">&sign_in;</string>

    <!-- Create fragment strings -->
    <string name="no_rights_to_announce">No required rights to announce.</string>
    <string name="enter_text">Enter text…</string>
    <string name="announce">Announce</string>
    <string name="new_announcement">New announcement</string>
    <string name="enter_announcement_text">Enter announcement text</string>
    <string name="choose_recipients">Choose at least one recipient</string>
    <string name="recipients">Recipients</string>
    <string name="announcement_text">Announcement text</string>
    <string name="event">Event</string>
    <string name="start">Start</string>
    <string name="start_date">Start date</string>
    <string name="start_time">Start time</string>
    <string name="end">End</string>
    <string name="end_date">End date</string>
    <string name="end_time">End time</string>
    <string name="starts_now">Starts now</string>
    <string name="never_ends">Never ends</string>
    <string name="ongoing">Ongoing</string>
    <string name="starts_at_fmt">Starts %s</string>
    <string name="ends_at_fmt">Ends %s</string>
    <string name="started_at_fmt">Started %s</string>
    <string name="ended_at_fmt">Ended %s</string>
    <string name="starts_at_fmt_verbose">Starts %2$s.%1$s.%3$d at %4$s:%5$s</string>
    <string name="ends_at_fmt_verbose">Ends %2$s.%1$s.%3$d at %4$s:%5$s</string>
    <string name="started_at_fmt_verbose">Started %2$s.%1$s.%3$d at %4$s:%5$s</string>
    <string name="ended_at_fmt_verbose">Ended %2$s.%1$s.%3$d at %4$s:%5$s</string>

    <!-- Inbox fragment strings -->
    <string name="noname">Noname</string>
    <string name="no_author">No author</string>
    <string name="author_fmt">Author: %1$s</string>
    <string name="role_fmt">Role: %1$s</string>
    <string name="class_fmt">Class: %1$s</string>
    <string name="text_fmt">Text: %1$s</string>

    <!-- Bottom Nav strings -->
    <string name="news">News</string>
    <string name="announcements">Announcements</string>
    <string name="profile">Profile</string>

    <!-- Announcement Detailed Activity strings -->
    <string name="announcement">Announcement</string>
    <string name="expand_text">Expand text…</string>
    <string name="no_announcements">There are no announcements yet.</string>
    <string name="comment">Comment</string>
    <string name="comments">Comments</string>
    <string name="now">Now</string>
    <string name="comment_settings">Comment settings</string>
    <string name="send_comment">Send comment</string>
    <string name="hidden">Hidden</string>
    <string name="hidden_comment">Hidden comment</string>
    <string name="write_comment">Write comment</string>
    <string name="comment_text">Comment text</string>
</resources>